src/css/style.css
body {
    font-family: "Poppins", sans-serif;
    margin: 0;
}

.site-header {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-weight: 300;
    font-size: 2rem;
}

.site-header > h1 {
    font-size: 2rem;
    font-weight: 700;
    margin-left: 1rem;
}

.header-nav {
    display: flex;
}

.header-nav > a {
    margin: 0 1rem;
    font-family: "Poppins", sans-serif;
    color: orchid;
    text-decoration: none;
    transition: color .3s ease-in-out;
}

.header-nav > a:hover {
    color: purple;
}

.wrapper {
    display: flex;
}

aside {
    height: 100%;
    width: 250px;
    position: fixed;
    top: 0;
    left: -250px;
    background-color: #333;
    overflow-x: hidden;
    transition: 0.5s;
    padding-top: 60px;
    z-index: 9;
}

aside a {
    padding: 15px 8px 15px 32px;
    text-decoration: none;
    font-size: 18px;
    color: #f1f1f1;
    display: block;
    transition: 0.3s;

}

aside a:hover {
    color: #008dde;
}

aside .close-btn {
    position: absolute;
    top: 10px;
    right: 10px;
    font-size: 24px;
    color: white;
    cursor: pointer;
}

main {
    transition: margin-left 0.5s;
    padding: 16px;
}

@media screen and (max-width: 400px) {
    aside {
        width: 0;
    }

    aside a {
        padding: 15px 8px 15px 16px;
    }

    aside .close-btn {
        right: 16px;
    }

    main {
        margin-left: 0;
    }
}

.panel {
    display: none;
    overflow: hidden;
    transition: max-height 0.3s ease-out;
}

.accordion.active {
    background-color: #444;
}

.accordion::after {
    content: '\002B';
    color: white;
    font-weight: bold;
    float: right;
    margin-left: 5px;
}

.active::after {
    content: "\2212";
}

.content-wrapper {
    /*margin: 0 auto;*/
    width: 100%;
}

.content {
    margin: 2rem;
    flex: 1;
    max-width: 1200px;
    width: 100%;
}

.menu-btn {
    font-size: 30px;
    color: white;
    cursor: pointer;
    position: fixed;
    z-index: 2;
    display: none;
    top: 1rem
}

.single-task-content {
    display: flex;
    flex-wrap: wrap;
}

.live-demo-link {
    display: block;
    margin: 1rem;
}

.live-prev-frame {
    max-width: 600px;
    width: 100%;

}

@media screen and (max-width: 600px) {
    .sidebar {
        width: 0;
    }

    .content {
        margin-left: 0;
    }

    .menu-btn {
        display: block;
    }
}

@media screen and (min-width: 600px) {
    .menu-btn {
        display: block;
        background: #616128;
        left: 0;
        padding-left: 1rem;
        border-radius: 0 1rem 1rem 0;
    }
}

